// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submissions-table___1J9eA"
>
  <table>
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          Type
        </th>
        <th>
          Submission Date
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__actions___16pRz"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <Submission
        challenge={
          Object {
            "id": "test-challenge",
          }
        }
        isWorkflowRunComplete={true}
        onDelete={[Function]}
        onDownload={[Function]}
        onOpenDownloadArtifactsModal={[Function]}
        onOpenRatingsListModal={[Function]}
        onShowDetails={[Function]}
        showScreeningDetails={true}
        submissionObject={
          Object {
            "id": "12345",
          }
        }
        track="Design"
      />
      <tr
        className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submission-row___1uclT"
      >
        <td
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__dev-details___2GC2b"
          colSpan="6"
        >
          <div
            className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__workflow-table___WCWMZ"
          >
            <TableWorkflowRuns
              challengeId="test-challenge"
              workflowRuns={null}
            />
          </div>
          <ScreeningDetails
            helpPageUrl=""
            onlineReviewUrl=""
            screeningObject={Object {}}
            submissionId="12345"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submissions-table___1J9eA"
>
  <table>
    <thead>
      <tr>
        <th>
          ID
        </th>
        <th>
          Type
        </th>
        <th>
          Submission Date
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__actions___16pRz"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submission-row___1uclT"
      >
        <td
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__no-submission___1jFHS"
          colSpan="6"
        >
          You have no submission uploaded so far.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
